simple text plugin without resizing capability

--- a/quiz-app/public/index2.html
+++ b/quiz-app/public/index2.html
@@ -15,6 +15,7 @@
     <script src="/js/app/plugin/ThemePlugin.js"></script>
     <script src="/js/app/plugin/StagePlugin.js"></script>
     <script src="/js/app/plugin/ImagePlugin.js"></script>
+    <script src="/js/app/plugin/TextPlugin.js"></script>
     <script src="/js/app/renderer/CanvasRenderer.js"></script>
     <style>
     	#gameArea {
