--- a/quiz-app/public/index2.html
+++ b/quiz-app/public/index2.html
@@ -16,6 +16,7 @@
     <script src="/js/app/plugin/StagePlugin.js"></script>
     <script src="/js/app/plugin/ImagePlugin.js"></script>
     <script src="/js/app/plugin/TextPlugin.js"></script>
+    <script src="/js/app/plugin/PlaceHolderPlugin.js"></script>
     <script src="/js/app/renderer/CanvasRenderer.js"></script>
     <style>
     	#gameArea {
@@ -42,7 +43,7 @@
 // 1. A display object of type Asset cannot contain another asset or container
 // 2. A display object of type container can contain another asset or a container
 $(document).ready(function() {
-    $.get('/json/sample3.json',
+    $.get('json/sample3.json',
         function(data) {
             Renderer.init(data, 'gameCanvas');
         },
