add css for text

--- a/quiz-app/public/index2.html
+++ b/quiz-app/public/index2.html
@@ -27,6 +27,13 @@
   			width: 100%;
   			height: 100%;
 		}
+        .inputText
+        {
+            -moz-border-radius: 15px;
+            border-radius: 15px;
+            border:solid 2px black; 
+            padding:5px;
+        }
     </style>
 </head>
 
