added input plugin to the sample xml

--- a/quiz-app/public/index2.html
+++ b/quiz-app/public/index2.html
@@ -16,6 +16,7 @@
     <script src="/js/app/plugin/StagePlugin.js"></script>
     <script src="/js/app/plugin/ImagePlugin.js"></script>
     <script src="/js/app/plugin/TextPlugin.js"></script>
+    <script src="/js/app/plugin/InputPlugin.js"></script>
     <script src="/js/app/plugin/PlaceHolderPlugin.js"></script>
     <script src="/js/app/renderer/CanvasRenderer.js"></script>
     <style>
