--- a/quiz-app/public/index2.html
+++ b/quiz-app/public/index2.html
@@ -29,12 +29,13 @@
   			width: 100%;
   			height: 100%;
 		}
-        .inputText
-        {
+        .inputText {
             -moz-border-radius: 15px;
             border-radius: 15px;
-            border:solid 2px black; 
-            padding:5px;
+            border:solid 2px black;
+            font-size: 20px;
+            padding-left: 10px;
+            padding-right: 5px;
         }
     </style>
 </head>
