--- a/quiz-app/public/index.html
+++ b/quiz-app/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="starter">
+<html ng-app="quiz">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
