change js and assets paths to relative paths

--- a/quiz-app/www/index2.html
+++ b/quiz-app/www/index2.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Test App</title>
-    <script src="/js/thirdparty/createjs-2015.05.21.min.js"></script>
-    <script src="/js/thirdparty/jquery.min.js"></script>
-    <script src="/js/thirdparty/underscore.js"></script>
-    <script src="/js/thirdparty/Class.js"></script>
-    <script src="/js/thirdparty/creatine-1.0.0.min.js"></script>
-    <script src="/js/app/plugin/PluginManager.js"></script>
-    <script src="/js/app/plugin/Plugin.js"></script>
-    <script src="/js/app/plugin/ContainerPlugin.js"></script>
-    <script src="/js/app/plugin/ThemePlugin.js"></script>
-    <script src="/js/app/plugin/StagePlugin.js"></script>
-    <script src="/js/app/plugin/ImagePlugin.js"></script>
-    <script src="/js/app/plugin/TextPlugin.js"></script>
-    <script src="/js/app/plugin/InputPlugin.js"></script>
-    <script src="/js/app/plugin/PlaceHolderPlugin.js"></script>
-    <script src="/js/app/renderer/CanvasRenderer.js"></script>
+    <script src="js/thirdparty/createjs-2015.05.21.min.js"></script>
+    <script src="js/thirdparty/jquery.min.js"></script>
+    <script src="js/thirdparty/underscore.js"></script>
+    <script src="js/thirdparty/Class.js"></script>
+    <script src="js/thirdparty/creatine-1.0.0.min.js"></script>
+    <script src="js/app/plugin/PluginManager.js"></script>
+    <script src="js/app/plugin/Plugin.js"></script>
+    <script src="js/app/plugin/ContainerPlugin.js"></script>
+    <script src="js/app/plugin/ThemePlugin.js"></script>
+    <script src="js/app/plugin/StagePlugin.js"></script>
+    <script src="js/app/plugin/ImagePlugin.js"></script>
+    <script src="js/app/plugin/TextPlugin.js"></script>
+    <script src="js/app/plugin/InputPlugin.js"></script>
+    <script src="js/app/plugin/PlaceHolderPlugin.js"></script>
+    <script src="js/app/renderer/CanvasRenderer.js"></script>
     <style>
     	#gameArea {
 		  	position: absolute;
