--- a/quiz-app/www/index2.html
+++ b/quiz-app/www/index2.html
@@ -36,6 +36,7 @@
             font-size: 20px;
             padding-left: 10px;
             padding-right: 5px;
+            z-index: 1000;
         }
     </style>
 </head>
