--- a/quiz-app/www/index2.html
+++ b/quiz-app/www/index2.html
@@ -32,11 +32,12 @@
         .inputText {
             -moz-border-radius: 15px;
             border-radius: 15px;
-            border:solid 2px black;
-            font-size: 20px;
-            padding-left: 10px;
+            border:solid 2px black !important;
+            font-weight: bold !important;
+            padding-left: 10px !important;
             padding-right: 5px;
             z-index: 1000;
+            text-align: center;
         }
     </style>
 </head>
