--- a/quiz-app/www/index2.html
+++ b/quiz-app/www/index2.html
@@ -18,6 +18,7 @@
     <script src="js/app/plugin/TextPlugin.js"></script>
     <script src="js/app/plugin/InputPlugin.js"></script>
     <script src="js/app/plugin/PlaceHolderPlugin.js"></script>
+    <script src="js/app/plugin/SummaryPlugin.js"></script>
     <script src="js/app/renderer/CanvasRenderer.js"></script>
     <style>
     	#gameArea {
