added sprite plugin and enable drag on placeholders

--- a/quiz-app/www/index.html
+++ b/quiz-app/www/index.html
@@ -43,6 +43,7 @@
     <script src="js/app/plugin/InputPlugin.js"></script>
     <script src="js/app/plugin/SummaryPlugin.js"></script>
     <script src="js/app/plugin/PlaceHolderPlugin.js"></script>
+    <script src="js/app/plugin/SpritePlugin.js"></script>
     <script src="js/app/renderer/CanvasRenderer.js"></script>
     <style>
         #gameArea {
