worksheet play state with params

--- a/quiz-app/www/index.html
+++ b/quiz-app/www/index.html
@@ -66,7 +66,11 @@
             z-index: 1000;
         }
         .pane {
-            background-color: #333 !important;
+            background-color: #000 !important;
+        }
+        .spinner svg {
+          stroke: #fff !important;
+          fill: #fff !important;
         }
     </style>
   </head>
