--- a/quiz-app/www/worksheet1.html
+++ b/quiz-app/www/worksheet1.html
@@ -5,13 +5,13 @@
 // Rules
 // 1. A display object of type Asset cannot contain another asset or container
 // 2. A display object of type container can contain another asset or a container
-$(document).ready(function() {
-    $.get('worksheets/worksheet1/markup.json',
-        function(data) {
-            Renderer.init(data, 'gameCanvas');
-        },
-        'json').fail(function() {
-    alert( "error" );
-  });
-});
+// $(document).ready(function() {
+//     $.get('worksheets/worksheet1/markup.json',
+//         function(data) {
+//             Renderer.init(data, 'gameCanvas');
+//         },
+//         'json').fail(function() {
+//     alert( "error" );
+//   });
+// });
 </script>
