--- a/quiz-app/www/index.html
+++ b/quiz-app/www/index.html
@@ -64,6 +64,7 @@
             font-weight: bold !important;
             padding-right: 5px;
             z-index: 1000;
+            text-align: center;
         }
         .pane {
             background-color: #000 !important;
