on back - reset bookshelf

--- a/quiz-app/www/index.html
+++ b/quiz-app/www/index.html
@@ -22,6 +22,9 @@
     <script src="lib/ionic/js/ionic.bundle.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="cordova.js"></script>
+
+    <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
 
     <script src="lib/angular-resource/angular-resource.min.js"></script>
