--- a/quiz-app/www/index.html
+++ b/quiz-app/www/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="js/thirdparty/jquery.min.js"></script>
     <script type="text/javascript" src="js/thirdparty/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="js/thirdparty/jquery.bookshelfslider.min.js"></script>
+    <script type="text/javascript" src="js/thirdparty/xml2json.min.js"></script>
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
