--- a/quiz-app/www/index.html
+++ b/quiz-app/www/index.html
@@ -48,6 +48,7 @@
     <script src="js/app/plugin/SummaryPlugin.js"></script>
     <script src="js/app/plugin/PlaceHolderPlugin.js"></script>
     <script src="js/app/plugin/SpritePlugin.js"></script>
+    <script src="js/app/plugin/AudioPlugin.js"></script>
     <script src="js/app/renderer/CanvasRenderer.js"></script>
     <style>
         #gameArea {
