Handle audio plugin

--- a/quiz-app/www/index.html
+++ b/quiz-app/www/index.html
@@ -50,6 +50,7 @@
     <script src="js/app/plugin/SpritePlugin.js"></script>
     <script src="js/app/plugin/AudioPlugin.js"></script>
     <script src="js/app/renderer/CanvasRenderer.js"></script>
+    <script src="js/app/plugin/CommandManager.js"></script>
     <style>
         #gameArea {
             position: absolute;
