--- a/quiz-app/www/index.html
+++ b/quiz-app/www/index.html
@@ -42,6 +42,7 @@
     <script src="js/app/plugin/ContainerPlugin.js"></script>
     <script src="js/app/plugin/ThemePlugin.js"></script>
     <script src="js/app/plugin/StagePlugin.js"></script>
+    <script src="js/app/plugin/ShapePlugin.js"></script>
     <script src="js/app/plugin/ImagePlugin.js"></script>
     <script src="js/app/plugin/TextPlugin.js"></script>
     <script src="js/app/plugin/InputPlugin.js"></script>
