--- a/quiz-app/www/index.html
+++ b/quiz-app/www/index.html
@@ -74,7 +74,7 @@
             text-align: center;
         }
         .pane {
-            background-color: #000 !important;
+            background-color: #fff !important;
         }
         .spinner svg {
           stroke: #fff !important;
