--- a/quiz-app/www/worksheet1.html
+++ b/quiz-app/www/worksheet1.html
@@ -1,8 +1,12 @@
 <div id="gameAreaLoad" style="margin:auto; position:absolute;width:100%;height:100%;">
-	<div style="margin: auto; width: 100%; position: fixed; text-align: center; top: 50%; font-weight: bold;">
-	    <ion-spinner icon="spiral"></ion-spinner>
-	    <div style="margin: auto; width: 100%; position: fixed; text-align: center; font-weight: bold;">
-			Loading "{{itemName || 'game'}}" assets...
+	<div style="margin: auto; width: 100%; position: fixed; text-align: center; top: 40%;">
+	    <div style="margin-bottom: 2%;">
+	    	<ion-spinner icon="bubbles"></ion-spinner>
+	    </div>
+	    <div style="margin: auto; width: 100%; position: fixed; text-align: center;">
+			<!-- Loading "{{itemName || 'game'}}" assets... -->
+			<div style="font-weight: bold; font-size: 40px;margin-bottom:3%;">Loading...</div>
+			<div style="font-size: 30px; color: gray;">Every great journey starts with a great story...</div>
 		</div>
 	</div>
 </div>
