--- a/quiz-app/www/worksheet1.html
+++ b/quiz-app/www/worksheet1.html
@@ -4,9 +4,8 @@
 	    	<ion-spinner icon="bubbles"></ion-spinner>
 	    </div>
 	    <div style="margin: auto; width: 100%; position: fixed; text-align: center;">
-			<!-- Loading "{{itemName || 'game'}}" assets... -->
 			<div style="font-weight: bold; font-size: 40px;margin-bottom:3%;">Loading...</div>
-			<div style="font-size: 30px; color: gray;">Every great journey starts with a great story...</div>
+			<div style="font-size: 30px; color: gray;">{{item.loadingMessage}}</div>
 		</div>
 	</div>
 </div>
