--- a/quiz-app/www/index.html
+++ b/quiz-app/www/index.html
@@ -52,6 +52,9 @@
     <script src="js/app/plugin/AudioPlugin.js"></script>
     <script src="js/app/renderer/CanvasRenderer.js"></script>
     <script src="js/app/plugin/CommandManager.js"></script>
+    <script src="js/app/service/FilewriterService.js"></script>
+    <script src="js/app/service/CordovaFilewriterService.js"></script>
+    <script src="js/app/service/TelemetryService.js"></script>
     <style>
         #gameArea {
             position: absolute;
@@ -74,6 +77,38 @@
             text-align: center;
         }
     </style>
+    <script type="text/javascript">
+        document.addEventListener("deviceready", function() {
+            window.requestFileSystem(LocalFileSystem.PERSISTENT, 0, function (fileSystem) {
+                filewriterService.initWriter(fileSystem);
+                console.log('initializing Telemetry Service...');
+                var user = {
+                    "sid": "de305d54-75b4-431b-adb2-eb6b9e546013",
+                    "uid": "123e4567-e89b-12d3-a456-426655440000",
+                    "did": "ff305d54-85b4-341b-da2f-eb6b9e5460fa"
+                };
+                var game = {
+                        "id": "com.ilimi.quiz.app",
+                        "ver": "1.0"
+                    };
+                /* 
+                *** Important: Assuming that game, user data will be read and passed to TelemetryService. 
+                *** Will change this if needed.
+                */
+                TelemetryService.init(user, game, null); // params are 1. user, 2. game, 3. config.
+                TelemetryService.start({});
+                TelemetryService.printAll();
+                setTimeout(function() {
+                    TelemetryService.flush();
+                }, 2000);
+                console.log('Setting fileSystem.root to local variable...:', filewriterService._root);
+            }, onError);
+        });
+        function onError(e) {
+            console.log('[ERROR] Problem setting up root filesystem for running! Error to follow.');
+            console.log(JSON.stringify(e));
+        };
+    </script>
   </head>
   <body>
     <ion-nav-view></ion-nav-view>
