Updated samples with https: and background color of the html body.

--- a/quiz-app/www/worksheets/addition_by_grouping/index.html
+++ b/quiz-app/www/worksheets/addition_by_grouping/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Ekstep Quiz App</title>
-    <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-    <script src="//s3-ap-southeast-1.amazonaws.com/ekstep-public/js/quizapp.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <script src="https://s3-ap-southeast-1.amazonaws.com/ekstep-public/js/quizapp.min.js"></script>
     <style>
     	#gameArea {
 		  	position: absolute;
@@ -30,7 +30,7 @@
     </style>
 </head>
 
-<body style="background-color: #ddd">
+<body style="background-color: #fff">
 	<div id="gameArea"> <!-- Keep the id enclosing div as "gameArea" only. Do not change  -->
   		<canvas id="gameCanvas"></canvas>
 	</div>
