--- a/quiz-app/www/worksheet1.html
+++ b/quiz-app/www/worksheet1.html
@@ -5,7 +5,7 @@
 	    </div>
 	    <div style="margin: auto; width: 100%; position: fixed; text-align: center;">
 			<div style="font-weight: bold; font-size: 40px;margin-bottom:3%;">Loading...</div>
-			<div style="font-size: 30px; color: gray;">{{item.loadingMessage}}</div>
+			<div style="font-size: 30px; color: gray;" ng-if="item.loadingMessage">{{item.loadingMessage}}</div>
 		</div>
 	</div>
 </div>
