Telemetry Service - assess - impl

--- a/quiz-app/www/index.html
+++ b/quiz-app/www/index.html
@@ -99,7 +99,7 @@
                 *** Will change this if needed.
                 */
                 TelemetryService.init(user, game); // params are 1. user, 2. game.
-                TelemetryService.startGame();
+                TelemetryService.start();
                 setTimeout(function() {
                     TelemetryService.flush();
                 }, 2000);
