modifications for including js tests.

--- a/quiz-app/www/index.html
+++ b/quiz-app/www/index.html
@@ -60,6 +60,8 @@
     <script src="js/app/telemetry/ConsolewriterService.js"></script>
     <script src="js/app/telemetry/CordovaFilewriterService.js"></script>
     <script src="js/app/telemetry/TelemetryService.js"></script>
+    <script src="js/test/specHelper.js"></script>
+
     <style>
         #gameArea {
             position: absolute;
