--- a/quiz-app/www/index.html
+++ b/quiz-app/www/index.html
@@ -83,16 +83,16 @@
         }
     </style>
     <script type="text/javascript">
-        var user = {
-            "sid": "de305d54-75b4-431b-adb2-eb6b9e546013",
-            "uid": "123e4567-e89b-12d3-a456-426655440000",
-            "did": "ff305d54-85b4-341b-da2f-eb6b9e5460fa"
-        };
-        var game = {
-            "id": "com.ilimi.quiz.app",
-            "ver": "1.0"
-        };
-        TelemetryService.init(user, game);
+        // var user = {
+        //     "sid": "de305d54-75b4-431b-adb2-eb6b9e546013",
+        //     "uid": "123e4567-e89b-12d3-a456-426655440000",
+        //     "did": "ff305d54-85b4-341b-da2f-eb6b9e5460fa"
+        // };
+        // var game = {
+        //     "id": "com.ilimi.quiz.app",
+        //     "ver": "1.0"
+        // };
+        // TelemetryService.init(user, game);
         // if(typeof cordova == 'undefined') {
         //     console.log('Running with node...');
         //     console.log('initializing Telemetry Service with ConsoleFilewriter...');
@@ -109,6 +109,10 @@
         //         }, 2000);
         //     });
         // }
+        function onError(e) {
+            console.log('[ERROR] Problem setting up root filesystem for running! Error to follow.');
+            console.log(JSON.stringify(e));
+        };
     </script>
   </head>
   <body>
