TelemetryService code restructure for  fluent api structure.

--- a/quiz-app/www/index.html
+++ b/quiz-app/www/index.html
@@ -60,6 +60,12 @@
     <script src="js/app/telemetry/ConsolewriterService.js"></script>
     <script src="js/app/telemetry/CordovaFilewriterService.js"></script>
     <script src="js/app/telemetry/TelemetryService.js"></script>
+    <script src="js/app/telemetry/InActiveEvent.js"></script>
+    <script src="js/app/telemetry/TelemetryEvent.js"></script>
+    <script src="js/app/telemetry/StartEvent.js"></script>
+    <script src="js/app/telemetry/InteractEvent.js"></script>
+    <script src="js/app/telemetry/AssessEvent.js"></script>
+    <script src="js/app/telemetry/EndEvent.js"></script>
     <style>
         #gameArea {
             position: absolute;
