--- a/quiz-app/www/TelemetrySpecRunner.html
+++ b/quiz-app/www/TelemetrySpecRunner.html
@@ -20,6 +20,13 @@
   <script src="js/app/telemetry/ConsolewriterService.js"></script>
   <script src="js/app/telemetry/CordovaFilewriterService.js"></script>
   <script src="js/app/telemetry/TelemetryService.js"></script>
+  <script src="js/app/telemetry/InActiveEvent.js"></script>
+  <script src="js/app/telemetry/TelemetryEvent.js"></script>
+  <script src="js/app/telemetry/StartEvent.js"></script>
+  <script src="js/app/telemetry/InteractEvent.js"></script>
+  <script src="js/app/telemetry/AssessEvent.js"></script>
+  <script src="js/app/telemetry/EndEvent.js"></script>
+  
 
 
   <script src="js/test/TelemetrySpec.js"></script>
