include audio manager in script dependency

--- a/quiz-app/www/index.html
+++ b/quiz-app/www/index.html
@@ -41,6 +41,7 @@
     <script src="js/app/manager/EventManager.js"></script>
     <script src="js/app/manager/CommandManager.js"></script>
     <script src="js/app/manager/AnimationManager.js"></script>
+    <script src="js/app/manager/AudioManager.js"></script>
     <script src="js/app/manager/AssetManager.js"></script>
     <script src="js/app/plugin/Plugin.js"></script>
     <script src="js/app/plugin/ContainerPlugin.js"></script>
