data provider implementation

--- a/quiz-app/www/index.html
+++ b/quiz-app/www/index.html
@@ -41,6 +41,7 @@
     <script src="js/app/manager/EventManager.js"></script>
     <script src="js/app/manager/CommandManager.js"></script>
     <script src="js/app/manager/AnimationManager.js"></script>
+    <script src="js/app/manager/ControllerManager.js"></script>
     <script src="js/app/plugin/Plugin.js"></script>
     <script src="js/app/plugin/ContainerPlugin.js"></script>
     <script src="js/app/plugin/ThemePlugin.js"></script>
@@ -53,6 +54,7 @@
     <script src="js/app/plugin/PlaceHolderPlugin.js"></script>
     <script src="js/app/plugin/SpritePlugin.js"></script>
     <script src="js/app/plugin/AudioPlugin.js"></script>
+    <script src="js/app/plugin/TemplatePlugin.js"></script>
     <script src="js/app/renderer/CanvasRenderer.js"></script>
     <script src="js/thirdparty/date-format.js"></script>
     <script src="js/app/telemetry/TelemetryServiceUtil.js"></script>
@@ -66,6 +68,10 @@
     <script src="js/app/telemetry/InteractEvent.js"></script>
     <script src="js/app/telemetry/AssessEvent.js"></script>
     <script src="js/app/telemetry/EndEvent.js"></script>
+    <script src="js/app/controller/Controller.js"></script>
+    <script src="js/app/controller/DataController.js"></script>
+    <script src="js/app/controller/ItemController.js"></script>
+
     <style>
         #gameArea {
             position: absolute;
