evaluator for fill in the blanks questions

--- a/quiz-app/www/index.html
+++ b/quiz-app/www/index.html
@@ -75,6 +75,7 @@
     <script src="js/app/controller/Controller.js"></script>
     <script src="js/app/controller/DataController.js"></script>
     <script src="js/app/controller/ItemController.js"></script>
+    <script src="js/app/evaluator/FTBEvaluator.js"></script>
 
     <style>
         #gameArea {
