Data generators implementation

--- a/quiz-app/www/index.html
+++ b/quiz-app/www/index.html
@@ -76,6 +76,8 @@
     <script src="js/app/controller/DataController.js"></script>
     <script src="js/app/controller/ItemController.js"></script>
     <script src="js/app/evaluator/FTBEvaluator.js"></script>
+    <script src="js/app/generator/DataGenerator.js"></script>
+    <script src="js/app/generator/ItemDataGenerator.js"></script>
 
     <style>
         #gameArea {
