1. Delete unecessary files 2. Grunt task to do a production build

--- a/quiz-app/www/index.html
+++ b/quiz-app/www/index.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="js/thirdparty/jquery.min.js"></script>
     <script type="text/javascript" src="js/thirdparty/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="js/thirdparty/jquery.bookshelfslider.min.js"></script>
-    <script type="text/javascript" src="js/thirdparty/xml2json.min.js"></script>
+    <script type="text/javascript" src="js/thirdparty/exclude/xml2json.min.js"></script>
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -34,11 +34,11 @@
     <!-- your app's js -->
     <script src="js/app/app.js"></script>
     <script src="js/app/services.js"></script>
-    <script src="js/thirdparty/createjs-2015.05.21.min.js"></script>
-    <script src="js/thirdparty/cordovaaudioplugin-0.6.1.min.js"></script>
+    <script src="js/thirdparty/exclude/createjs-2015.05.21.min.js"></script>
+    <script src="js/thirdparty/exclude/cordovaaudioplugin-0.6.1.min.js"></script>
     <script src="js/thirdparty/underscore.js"></script>
-    <script src="js/thirdparty/Class.js"></script>
-    <script src="js/thirdparty/creatine-1.0.0.min.js"></script>
+    <script src="js/thirdparty/exclude/Class.js"></script>
+    <script src="js/thirdparty/exclude/creatine-1.0.0.min.js"></script>
     <script src="js/app/manager/PluginManager.js"></script>
     <script src="js/app/manager/EventManager.js"></script>
     <script src="js/app/manager/CommandManager.js"></script>
@@ -60,7 +60,7 @@
     <script src="js/app/plugin/AudioPlugin.js"></script>
     <script src="js/app/plugin/EmbedPlugin.js"></script>
     <script src="js/app/renderer/CanvasRenderer.js"></script>
-    <script src="js/thirdparty/date-format.js"></script>
+    <script src="js/thirdparty/exclude/date-format.js"></script>
     <script src="js/app/telemetry/TelemetryServiceUtil.js"></script>
     <script src="js/app/telemetry/FilewriterService.js"></script>
     <script src="js/app/telemetry/ConsolewriterService.js"></script>
