Genie Service Plugin and test integration

--- a/quiz-app/public/index.html
+++ b/quiz-app/public/index.html
@@ -31,6 +31,8 @@
 
     <script src="lib/angular-resource/angular-resource.min.js"></script>
 
+    <script type="text/javascript" src="GenieServicePlugin.js"></script>
+
     <!-- your app's js -->
     <script src="js/app/app.js"></script>
     <script src="js/app/services.js"></script>
