DownloaderService and PlatformService changes

--- a/quiz-app/public/index.html
+++ b/quiz-app/public/index.html
@@ -30,7 +30,8 @@
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
 
     <script src="lib/angular-resource/angular-resource.min.js"></script>
-
+    <script src="js/app/cordova-plugin/PlatformService.js"></script>
+    <script src="js/app/cordova-plugin/DownloaderService.js"></script>
 
     <!-- your app's js -->
     <script src="js/app/app.js"></script>
