1. Created AnimationPlugin as a base plugin for all animations. 2. Implemented TweenPlugin 3. Implemented LoadByStrategy (extracted code from asset manager) 4. Updated the markups accordingly

--- a/quiz-app/public/index.html
+++ b/quiz-app/public/index.html
@@ -48,7 +48,9 @@
     <script src="js/app/manager/ControllerManager.js"></script>
     <script src="js/app/manager/AudioManager.js"></script>
     <script src="js/app/manager/AssetManager.js"></script>
+    <script src="js/app/manager/LoadByStageStrategy.js"></script>
     <script src="js/app/plugin/Plugin.js"></script>
+    <script src="js/app/plugin/AnimationPlugin.js"></script>
     <script src="js/app/plugin/ContainerPlugin.js"></script>
     <script src="js/app/plugin/ThemePlugin.js"></script>
     <script src="js/app/plugin/StagePlugin.js"></script>
@@ -61,6 +63,7 @@
     <script src="js/app/plugin/SpritePlugin.js"></script>
     <script src="js/app/plugin/AudioPlugin.js"></script>
     <script src="js/app/plugin/EmbedPlugin.js"></script>
+    <script src="js/app/plugin/TweenPlugin.js"></script>
     <script src="js/app/renderer/CanvasRenderer.js"></script>
     <script src="js/thirdparty/exclude/date-format.js"></script>
     <script src="js/app/telemetry/TelemetryServiceUtil.js"></script>
