MCQ and MTF plugin changes

--- a/quiz-app/public/index.html
+++ b/quiz-app/public/index.html
@@ -64,6 +64,10 @@
     <script src="js/app/plugin/AudioPlugin.js"></script>
     <script src="js/app/plugin/EmbedPlugin.js"></script>
     <script src="js/app/plugin/TweenPlugin.js"></script>
+    <script src="js/app/plugin/MCQPlugin.js"></script>
+    <script src="js/app/plugin/MTFPlugin.js"></script>
+    <script src="js/app/plugin/OptionPlugin.js"></script>
+    <script src="js/app/plugin/OptionsPlugin.js"></script>
     <script src="js/app/renderer/CanvasRenderer.js"></script>
     <script src="js/thirdparty/exclude/date-format.js"></script>
     <script src="js/app/telemetry/TelemetryServiceUtil.js"></script>
@@ -81,6 +85,8 @@
     <script src="js/app/controller/DataController.js"></script>
     <script src="js/app/controller/ItemController.js"></script>
     <script src="js/app/evaluator/FTBEvaluator.js"></script>
+    <script src="js/app/evaluator/ChoiceEvaluator.js"></script>
+    <script src="js/app/evaluator/MTFEvaluator.js"></script>
     <script src="js/app/generator/DataGenerator.js"></script>
     <script src="js/app/generator/ItemDataGenerator.js"></script>
     <script src="js/test/specHelper.js"></script>
