renamed markup.xml to index.ecml

--- a/quiz-app/public/stories/haircut_story/index.html
+++ b/quiz-app/public/stories/haircut_story/index.html
@@ -6,7 +6,8 @@
     <title>Ekstep Quiz App</title>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-    <script src="https://s3-ap-southeast-1.amazonaws.com/ekstep-public/js/quizapp.min.js"></script>
+    <script src="https://s3-ap-southeast-1.amazonaws.com/ekstep-public/js/quizapp-0.2.min.js"></script>
+    <script src="https://s3-ap-southeast-1.amazonaws.com/ekstep-public/js/telemetry-lib-0.2.min.js"></script>
     <style>
     	#gameArea {
 		  	position: absolute;
