content list api integration messages

--- a/quiz-app/public/index_min.html
+++ b/quiz-app/public/index_min.html
@@ -24,6 +24,9 @@
     <script src="lib/angular-resource/angular-resource.min.js"></script>
     <!-- your app's js -->
     <script src="js/app/app.js"></script>
+    <script src="js/app/GlobalContext.js"></script>
+    <script src="js/app/AppConfig.js"></script>
+    <script src="js/app/AppMessages.js"></script>
     <script src="js/app/services.js"></script>
     <script src="js/app/quizapp-0.2.min.js"></script>
     <script src="js/app/telemetry-lib-0.2.min.js"></script>
