--- a/quiz-app/public/index.html
+++ b/quiz-app/public/index.html
@@ -35,6 +35,9 @@
 
     <!-- your app's js -->
     <script src="js/app/app.js"></script>
+    <script src="js/app/GlobalContext.js"></script>
+    <script src="js/app/AppConfig.js"></script>
+    <script src="js/app/AppMessages.js"></script>
     <script src="js/app/services.js"></script>
     <script src="js/thirdparty/exclude/createjs-2015.05.21.min.js"></script>
     <script src="js/thirdparty/exclude/cordovaaudioplugin-0.6.1.min.js"></script>
