Intent Service plugin

--- a/quiz-app/public/index.html
+++ b/quiz-app/public/index.html
@@ -32,6 +32,7 @@
     <script src="lib/angular-resource/angular-resource.min.js"></script>
     <script src="js/app/cordova-plugin/PlatformService.js"></script>
     <script src="js/app/cordova-plugin/DownloaderService.js"></script>
+    <script src="js/app/cordova-plugin/IntentService.js"></script>
 
     <!-- your app's js -->
     <script src="js/app/GlobalContext.js"></script>
