--- a/quiz-app/public/tests/CanvasRendererSpecRunner.html
+++ b/quiz-app/public/tests/CanvasRendererSpecRunner.html
@@ -11,15 +11,15 @@
     <script src="/js/thirdparty/jasmine-2.3.4/boot.js"></script>
     <script src="/js/thirdparty/jquery.min.js"></script>
     <script src="/js/thirdparty/underscore.js"></script>
-    <script src="/js/app/quizapp-0.2.min.js"></script>
-    <script src="/js/app/telemetry-lib-0.2.min.js"></script>
+    <script src="/js/app/quizapp-0.3.min.js"></script>
+    <script src="/js/app/telemetry-lib-0.3.min.js"></script>
     <script src="/js/test/BaseSpec.js"></script>
     <script src="/js/test/PluginManagerSpec.js"></script>
     <script src="/js/test/CommandManagerSpec.js"></script>
-    <script src="/js/test/EventManagerSpec.js"></script>
-    <script src="/js/test/AudioManagerSpec.js"></script>
-    <script src="/js/test/AnimationManagerSpec.js"></script>
-    <script src="/js/test/AssetManagerSpec.js"></script>
+    <!-- // <script src="/js/test/EventManagerSpec.js"></script>
+    // <script src="/js/test/AudioManagerSpec.js"></script>
+    // <script src="/js/test/AnimationManagerSpec.js"></script>
+    // <script src="/js/test/AssetManagerSpec.js"></script> -->
 </head>
 <body></body>
 </html>
