genie service - userprofile.finish() call updated.

--- a/quiz-app/public/tests/CanvasRendererSpecRunner.html
+++ b/quiz-app/public/tests/CanvasRendererSpecRunner.html
@@ -16,10 +16,10 @@
     <script src="/js/test/BaseSpec.js"></script>
     <script src="/js/test/PluginManagerSpec.js"></script>
     <script src="/js/test/CommandManagerSpec.js"></script>
-    <!-- // <script src="/js/test/EventManagerSpec.js"></script>
-    // <script src="/js/test/AudioManagerSpec.js"></script>
-    // <script src="/js/test/AnimationManagerSpec.js"></script>
-    // <script src="/js/test/AssetManagerSpec.js"></script> -->
+    <script src="/js/test/EventManagerSpec.js"></script>
+    <script src="/js/test/AudioManagerSpec.js"></script>
+    <script src="/js/test/AnimationManagerSpec.js"></script>
+    <script src="/js/test/AssetManagerSpec.js"></script>
 </head>
 <body></body>
 </html>
